--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -12,7 +12,7 @@ tau_manifesto:
   
 cat_video:
   content: "Sad cats are sad: https://youtu.be/PKffm2uI4dk"
-  created_at: <%= Time.zone.now %>
+  created_at: <%= 2.hours.ago %>
   user: michael
   
 most_recent:
